--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                  <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                    <h3 class="heading_store-hours"> STORE HOURS</h3>
                    <p class="context_store-hours"> Monday: Closed</p>
-                   <p class="context_store-hours"> Tuesday: 12:00P P.M-10:00P.M </p>
-                   <p class="context_store-hours"> Wednesday: 12:00P P.M-10:00P.M </p>
-                   <p class="context_store-hours"> Thursday: 12:00P P.M-10:00P.M </p>
+                   <p class="context_store-hours"> Tuesday: 12:00 P.M-10:00P.M </p>
+                   <p class="context_store-hours"> Wednesday: 12:00 P.M-10:00P.M </p>
+                   <p class="context_store-hours"> Thursday: 12:00 P.M-10:00P.M </p>
                    <p class="context_store-hours"> Friday: 12:00 P.M-11:00 P.M</p>
                    <p class="context_store-hours"> Saturday: 10:00 A.M-11:00 P.M</p>
                    <p class="context_store-hours"> Sunday: 10:00 A.M-9:00 P.M</p>
@@ -240,13 +240,13 @@
                  </div>
                  <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                    <h3 class="heading_location"> LOCATION</h3>
-                   <p class="context_location"><a href="https://maps.app.goo.gl/hYBPHUz7DswEeSkEA" target="_blank"><i class="fas fa-home mr-3"></i> 710 Newdorp Lane, 10306  </a>  </p>
+                   <p class="context_location"><a href="https://maps.app.goo.gl/hYBPHUz7DswEeSkEA" target="_blank"><i class="fas fa-home mr-3"></i> 710 New Dorp Lane, 10306  </a>  </p>
                   
                  </div>
                  <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                    <h3 class="heading_contact-us"> CONTACT US</h3>
                    <p class="context_contact-us"> <a href="tel:+9178300230"> <i class="fas fa-phone mr-3"></i> (917) 830-0230</a> </p>
-                   <p class="context_contact-us"> <i class="fas fa-envelope mr-4"></i> <a href="mailto:ariellaresturant@gmail.com"> ariellasresturante@gmail.com</a></p>
+                   <p class="context_contact-us"> <i class="fas fa-envelope mr-4"></i> <a href="mailto:ariellasrestaurant@gmail.com"> ariellasrestaurant@gmail.com</a></p>
                 
                  </div>
                  <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
